added permanent text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <header>
@@ -63,28 +63,19 @@
         <div class="service">
           <h3>Mobile Friendly</h3>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore
-            hic, animi porro aliquid quibusdam id nobis vero? Dignissimos, eaque
-            mollitia, optio esse ipsum fuga blanditiis molestias itaque magnam
-            ex aliquam?
+            Smartphones quickly went from expensive, exciting new technology, to a regular part of everyday life. Today we find it strange for anyone to leave the house without their phone. From hospital waiting rooms to theater lobbies (back when they were open anyways), people staring at their phones is a normal sight. 
           </p>
         </div>
         <div class="service">
           <h3>Web Design</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid
-            rerum qui dicta vitae beatae fugit nihil ipsum totam, repellendus
-            inventore obcaecati! Officiis quae harum eum blanditiis tempore qui
-            corrupti suscipit!
+            A web designer works on the appearance, layout, and, in some cases, content of a website. Appearance, for instance, relates to the colors, font, and images used. Layout refers to how information is structured and categorized
           </p>
         </div>
         <div class="service">
           <h3>Web Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur
-            quaerat fugit eius deleniti quam nobis voluptate, accusantium
-            voluptas. Odio provident eveniet, sed doloremque est esse doloribus
-            nulla explicabo. Deleniti, magni?
+            Web development refers to the building, creating, and maintaining of websites. It includes aspects such as web design, web publishing, web programming, and database management. It is the creation of an application that works over the internet i.e. websites.
           </p>
         </div>
       </div>
@@ -96,21 +87,15 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        A proud parent and a family man
+        I graduated at University Of Utah Full Stack Web Development
       </p>
 
       <div class="about-me__body">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          voluptas veniam porro harum commodi non praesentium pariatur debitis
-          nam quos totam, accusantium ducimus unde, dicta dolorum at saepe
-          libero adipisci!
+          I attended a coding bootcamp which is a innovative new form of short-term, intensive, and often immersive education designed to provide aspiring tech professionals the technical skills they need to start careers in software engineering and other tech fields.
         </p>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus,
-          magni expedita optio aspernatur voluptatem minus ipsum eaque pariatur
-          necessitatibus tenetur, numquam dolorum delectus voluptas esse
-          obcaecati ad veritatis fugiat consequatur.
+          In the bootcamp i learned many things like problem solving, and the love to keep learning i learned to work in a group to make a main projects with 3-4 people and learned how hard working with different types of people can be. I grew as a person and learned allot about myself through trial and error.
         </p>
       </div>
 
@@ -176,37 +161,37 @@
           />
         </a>
         <!-- Portfolio Item 7 -->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img
             src="img/photo-1457305237443-44c3d5a30b89.avif"
             alt=""
             class="portfolio__img"
           />
-        </a>
+        </a> -->
         <!-- Portfolio Item 8 -->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img
             src="img/photo-1457305237443-44c3d5a30b89.avif"
             alt=""
             class="portfolio__img"
           />
-        </a>
+        </a> -->
         <!-- Portfolio Item 9 -->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img
             src="img/photo-1457305237443-44c3d5a30b89.avif"
             alt=""
             class="portfolio__img"
           />
-        </a>
+        </a> -->
         <!-- Portfolio Item 10 -->
-        <a href="#" class="portfolio__item">
+        <!-- <a href="#" class="portfolio__item">
           <img
             src="img/photo-1457305237443-44c3d5a30b89.avif"
             alt=""
             class="portfolio__img"
           />
-        </a>
+        </a> -->
       </div>
     </section>
 
